has_many, belongs_to の実験 （clan - battle の関係）

--- a/app/views/battles/_form.html.haml
+++ b/app/views/battles/_form.html.haml
@@ -1,4 +1,5 @@
-= form_for @battle do |f|
+= form_for @battle, |
+           url: @clan.nil? ? battles_path : clan_battles_path(@clan.id) do |f|
   - if @battle.errors.any?
     #error_explanation
       %h2= "#{pluralize(@battle.errors.count, "error")} prohibited this battle from being saved:"
