--- a/app/views/battles/index.html.haml
+++ b/app/views/battles/index.html.haml
@@ -6,6 +6,7 @@
       %th Code
       %th Name
       %th Num
+      %th Clan
       %th
       %th
       %th
@@ -16,6 +17,7 @@
         %td= battle.code
         %td= battle.opponent_name
         %td= battle.base_count
+        %td= battle.clan&.name
         %td= link_to 'Show', battle
         %td= link_to 'Edit', edit_battle_path(battle)
         %td= link_to 'Destroy', battle, :method => :delete, :data => { :confirm => 'Are you sure?' }
